# pico-workspace

./: .gitignore  CMakeLists.txt  README.md  pico-workspace.code-workspace
LED_LCD_i2c/: CMakeLists.txt  LED_LCD_i2c.cpp  screens.cpp  screens.h
SSD1306_example/: CMakeLists.txt  SSD1306_example.cpp
Sound_Sensor/: CMakeLists.txt  README.md  Sound Sensor.fzz  SoundSensor + Screen.fzz  Sound_Sensor.cpp  plotter.py  screens.cpp  screens.h  sound_sensor.hpp
libs/HC-SR04-Ultrasonic-Sensor/: HC-SR04-Ultrasonic-Sensor.h
libs/SSD1306-Oled-Pico/: CMakeLists.txt  GFX.cpp  GFX.hpp  README.md  SSD1306.cpp  SSD1306.hpp  SSD1306_example.cpp  font.hpp  logo.hpp
libs/custom_characters/: custom_characters.h
libs/dht22_pico/: dht22_pico.cpp  dht22_pico.h
test_1/: CMakeLists.txt  screens.cpp  screens.h  test_1.cpp  test_1.fzz  types.h
test_HC_SR04/: CMakeLists.txt  test_HC_SR04.cpp
